# geds-explorer

./: .gitignore  Plan.md
work/geds-crawler/: README.md  SECURITY.md  pyproject.toml
work/geds-crawler/scripts/: verify_pagination_backfill.py
work/geds-crawler/src/geds_crawler/: __init__.py  canonical_hierarchy.py  canonical_models.py  canonical_projection.py  canonical_resolver.py  canonical_store.py  canonicalizer.py  career_api.py  career_api_models.py  career_cli.py  career_index.py  career_leads.py  career_matcher.py  career_people.py  career_repository.py  career_taxonomy.py  catalog.py  cli.py  config.py  control_models.py  control_queries.py  control_store.py  engine.py  exporter.py  fetcher.py  models.py  pagination.py  parser.py  process_manager.py  progress.py  run_metrics.py  scheduler.py  store.py  traffic.py  ui_queries.py  ui_server.py  urls.py  worker_cli.py
work/geds-crawler/tests/: test_canonical_hierarchy.py  test_canonical_projection.py  test_canonical_resolver.py  test_canonical_store.py  test_canonicalizer.py  test_career_api.py  test_career_cli.py  test_career_index.py  test_career_leads.py  test_career_matcher.py  test_career_people.py  test_career_repository.py  test_career_taxonomy.py  test_catalog.py  test_control_api.py  test_control_store.py  test_engine.py  test_engine_control.py  test_fetcher.py  test_parser.py  test_process_manager.py  test_progress.py  test_run_metrics.py  test_scheduler.py  test_store.py  test_traffic.py  test_ui_cli.py  test_ui_queries.py  test_ui_server.py  test_urls.py  test_verify_pagination_backfill.py
(+180 files in other folders)
