[project]
name = "geds-crawler"
version = "0.1.0"
description = "Controlled GEDS crawl snapshot pipeline"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
geds-crawl = "geds_crawler.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
